2011-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm_At.R (expAtv): finally add the functionality for
	'exp(A*t) %*% v' Ravi had translated from EXPOKIT in August.

2011-08-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R (expm): add new method "PadeRBS" (Roger B. Sidje),
	interfacing to the corresponding Fortran code.
	* src/init.c, src/expm.h: also namespace-ify the Fortran symbols.

2011-08-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: also import solve() from Matrix, for sparse expm()

2011-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-4
		(Suggests): RColorBrewer, sfsmisc -- used in examples

	* inst/doc/expm.Rnw: replace the few non-ASCII chars by LaTeX.

2010-08-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/logm.Higham08.R (logm.Higham08): force argument to Schur(.) to
	be dense for now  (working around infelicitous Matrix method).
	(logm.Higham08): catch case of infinite loop

	* man/logm.Rd: add example of the above.

2010-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-2

	* src/matpow.c (R_matpow): fix modify-argument bug in %^%.
	Thanks to stackflow-user "gd047" for reporting it.

2010-07-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-1, for (first!) release to CRAN

2009-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.96-2

	* tests/exact-ex.R: adapt last test, to also pass on 32-bit Mac OSX

2009-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/exact-ex.R: move print() to see Mac OSX error

2009-03-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sqrtm.R (sqrtm): allow negative eigenvalues, with a
	message iff "verbose"; use sqrt(<complex>) in that case.
	* R/logm.Higham08.R (logm.Higham08): allow negative eigenvalues,
	as in sqrtm.

	* R/expmCond-all.R (.expmCond.1, .expmFrechet2008.26): and others;